--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #server.port=8081
-spring.datasource.url=jdbc:h2:mem:MAS_Projekt
+spring.datasource.url=jdbc:h2:file:./db/ProjektDB
 spring.jpa.generate-ddl=true
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=Projekt
